# scMOCHA-data

./: .Rprofile  .env.example  .gitignore  .lintr  .uv.toml  AGENTS.md  CLAUDE.md  INSTRUCTION.md  LICENSE  README.md  a.R  a.excalidraw  air.toml  data  high-res-MANUSCRIPTFIGURES  high-res-MANUSCRIPTFIGURES-notuse  large-scale  main.py  packages.R  pixi.toml  pyproject.toml  pyproject.toml.bak  scMOCHA.batch.inputs.json  scMOCHA.batch.wdl  scmocha.yaml
.R/: Makevars
.github/: copilot-instructions.md  scmocha-agent-coding-guidelines.md
.opencode/: guidelines.md  opencode.json  tui.json
analysis/: 00-circos-coverage.R  00-colors.R  00-coverage.R  00-gse-samples-and-variant-fisher.R  00-gse-samples-and-variant.R  00-known-disease-variant.R  00-metadata-alluvial.R  00-prepare-coverage.R  00-samples.R  00-variants-fisher.R  00-variants.R  00.10-gse-samples-and-variant.R  00.10-gse-samples-and-variant[bak].R  00.11-variants.R  00.20-metadata-alluvial.R  00.21-prepare-coverage.R  01-dataset-celltype-stats.R  02-dataset-variants-flextable-fisher.R  02-dataset-variants-flextable.R  03-individual-variants-correlation-with-age-disease.R  04-individual-variants-maf-mtdna-enrichment.R  05-individual-circos-all-variants-fisher.R  05-individual-circos-all-variants.R  05-individual-circos-all-variants.share.R  06-celltype-hetero-homo-variant-heatmap-fisher.R  06-celltype-hetero-homo-variant-heatmap.R  07-celltype-hetero-variant-heatmap-fisher.R  07-celltype-hetero-variant-heatmap.R  08-celltype-hetero-variant-heatmap-sc5p-AD.R  09-Disease-AD-variant-diff-fisher.R  (+79 more)
misc/: a.R  b.R  (+27 more)
(+389 files in other folders)
