[project]
name = "scmocha-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "polars>=1.32.3",
    "rich>=14.1.0",
    "ruff>=0.12.2",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.1.0"]

[tool.ruff.lint]
ignore = ["F401"]  # Keep F821 enabled to catch undefined names
