[project]
name = "scmocha-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.38.1",
    "typer>=0.21.1",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
scmocha-data = { path = ".", editable = true }

[tool.pixi.tasks]
